somehow pdf online not in syn?

--- a/paper.tex
+++ b/paper.tex
@@ -438,13 +438,13 @@ and potentially incorrect compilation.
 
 To address these issues and to demonstrate the possibility of building trustworthy compilation pipelines,
 fully verified compilers that offer formal correctness guarantees e.g., CompCert, 
-a verified compiler for the C language, have been developed. However, as noted in, 
-“adding optimizations is limited by the effort required to verify them,” hinting towards the blocking
+a verified compiler for the C language, have been developed. However, as noted in, “adding optimizations 
+is limited by the effort required to verify them,” hinting towards the blocking
 proof burden involved. As a result, verified compilers are hard to extend, slow to adapt, and remain
 niche tools.
 
 In contrast, modern production compilers advance rapidly through continuous, fast-paced development 
-by their community. A prominent example is LLVM \cite{llvm_ref}, a widely used open-source compiler 
+by their community. A prominent example is LLVM, a widely used open-source compiler 
 framework forming the compiler middle- and backend for a variety of programming languages ,e.g., C, 
 Rust, Lean, Haskell.
 
