Add background section

--- a/paper.tex
+++ b/paper.tex
@@ -597,6 +597,8 @@ to be determined (\autoref{sec:evaluation}).
 
 \section{Our New Idea}
 
+\section{Background}
+\label{sec:background}
 
 \section{Implementation}
 \label{sec:implementation}
