make idea section title concrete

--- a/paper.tex
+++ b/paper.tex
@@ -595,7 +595,10 @@ close to that of established compilers by lowering and evaluating XY randomly ge
 to be determined (\autoref{sec:evaluation}).
 \end{itemize}
 
-\section{Our New Idea}
+\section{The Idea: Certified Instruction Selection at Scale}
+
+\grosser{Give a high-level overview of your idea. Let the reader \textbf{feel} how streamlined
+the process of defining a small peephole rewriter is. Give a couple of concrete examples.}
 
 \section{Background}
 \label{sec:background}
