--- a/paper.tex
+++ b/paper.tex
@@ -570,12 +570,13 @@ Our contributions are:\sarah{ref the section where I resolve this contribution}
 \begin{itemize}
 \item A software representation of the pure RISC-V base ISA and selected RISC-V extensions, implemented Lean-native
  as an SSA-based IR with provable authoritative RISC-V denotational semantics designed amenable for
-  proof automation via bit-blasting directly in ITPs (compared to large, complex processor models).
+  proof automation via bit-blasting directly in ITPs (compared to large, complex processor models)
+  (\autoref{sec:riscv-ssa}).
 
 \item End-to-end certified library of instruction selection and optimization patterns extracted from
  the underexplored LLVM backends, verified against the official RISC-V semantics relying on an extensible,
   generalizabel toolchain we have built in Lean to model MLIR-style hybrid IRs and to verify their progressive
-   lowering including MLIR conversion cast.
+   lowering including MLIR conversion cast (\autoref{sec:inst-selection-automation}).
 
 \item Implementation of an extensible, fully verified instruction selector prototype for LLVM IR built
  atop the extensible, certified pattern-rewrite library with full proof discharge of the refining 
@@ -602,6 +603,13 @@ the process of defining a small peephole rewriter is. Give a couple of concrete 
 
 \section{Background}
 \label{sec:background}
+
+
+\section{An SSA-based RISC-V IR Certified Against the Authoritative RISC-V Semantics}
+\label{sec:riscv-ssa}
+
+\section{Using Bit-Balasting to Certify Instruction Selection Rewrite Automatically}
+\label{sec:inst-selection-automation}
 
 \section{Implementation}
 \label{sec:implementation}
