--- a/paper.tex
+++ b/paper.tex
@@ -568,12 +568,12 @@ instruction selection and optimizations at core are verified.
 \noindent
 Our contributions are:\sarah{ref the section where I resolve this contribution}
 \begin{itemize}
-\item A software representation of the pure RISC-V base ISA and selected RISC-V extensions, implemented Lean-native
+\item A software representation of the pure RISC-V base ISA and \grosser[selected RISC-V extensions]{be concrete! - can you list the extensions you support?}, implemented Lean-native
  as an SSA-based IR with provable authoritative RISC-V denotational semantics designed amenable for
   proof automation via bit-blasting directly in ITPs (compared to large, complex processor models)
   (\autoref{sec:riscv-ssa}).
 
-\item End-to-end certified library of instruction selection and optimization patterns extracted from
+\item End-to-end certified library of \grosser[instruction selection and optimization patterns]{Can we make this concrete, e.g., count the number of patterns, or claim completeness on certain subsets of the LLVM backend?} extracted from
  the underexplored LLVM backends, verified against the official RISC-V semantics relying on an extensible,
   generalizabel toolchain we have built in Lean to model MLIR-style hybrid IRs and to verify their progressive
    lowering including MLIR conversion cast (\autoref{sec:inst-selection-automation}).
