mark comments as comments

--- a/paper.tex
+++ b/paper.tex
@@ -592,8 +592,8 @@ command-line in Lean that lowers  LLVM IR to RISC-V register-allocated assembly,
 \item An evaluation demonstrating the use of our pipeline and models in Lean by verifying the LLVM 
 components of the previously unverified RISC-V code generation test suite in LLVM. Additionally, we 
 show that our verified code generation approach — focusing on instruction selection — achieves performance 
-close to that of established compilers by lowering and evaluating XY randomly generated programs. 
-to be determined (\autoref{sec:evaluation}).
+close to that of established compilers by lowering and evaluating \sarah[XY]{} randomly generated programs.
+\sarah{to be determined} (\autoref{sec:evaluation}).
 \end{itemize}
 
 \section{The Idea: Certified Instruction Selection at Scale}
