--- a/paper.tex
+++ b/paper.tex
@@ -412,7 +412,7 @@ Rust, Lean, Haskell.
 Moreover, LLVM embodies modern compiler design principles through its architecture built around an 
 intermediate representation (IR), which is a language used to represent a program within the compiler 
 toolchain that enables language-agnostic optimizations, and its design for iteratively optimizing a 
-program throughout its lifetime\footnote{By program lifetime we refer to the program at diffrent stages
+program throughout its lifetime\footnote{By program lifetime we refer to the program at different stages
 until executed during runtime, e.g, compile time, link time, code generation}. By providing a frontend
 that lowers source code to LLVM's IR, compiler developers can reuse LLVM's powerful middle and backends,
 making LLVM attractive for building new compilers.
