--- a/paper.tex
+++ b/paper.tex
@@ -446,8 +446,8 @@ end can be invalidated by bugs in the backend. Regehr et al. investigated the AR
 backend and uncovered a multifold of bugs, highlighting that these low-level components are the most
 error-prone parts of the compilation pipeline. However, such  verification work as in
 relied on SMT solvers, which are automated verification tools implemented by a large, unverified 
-codebases with a history of bugs. Nuno et Al. noted "we did encounter solver bugs while performing 
-this work" in, where they aimed to detect misoptimizations in LLVM’s middle end, but encountered that
+codebases with a history of bugs. Nuno et Al. noted ``we did encounter solver bugs while performing 
+this work'' in, where they aimed to detect misoptimizations in LLVM’s middle end, but encountered that
 20\% of the reported issues were bugs in the SMT solver itself. Moreover, correctness is based on 
 handwritten ISA semantics, and the compiler backend's work is verified by first performing an unverified
 lift into LLVM IR, then reusing translation validators for the middle end. In contrast, we argue that the
@@ -470,7 +470,7 @@ in our instruction selector. This effort sheds light on the often opaque interna
 compiler backends and demonstrates hands-on verification work in a realistic compiler phase. To 
 improve the quality of the generated code, we incorporate semantics-preserving, assembly-level 
 peephole optimizations. These eliminate inefficiencies introduced during instruction selection and
-are again inspired by "combiners", optimization patterns used in the LLVM backends.\newline
+are again inspired by ``combiner'', optimization patterns used in the LLVM backends.\newline
 Our design emphasizes modularity and extensibility with little proof burden: instruction selection 
 patterns are represented as verified rewrite rules, and the associated correctness proofs is 
 automatically discharged wherever possible by our implemented proof automation. This stands in 
