--- a/paper.tex
+++ b/paper.tex
@@ -286,8 +286,8 @@ the evaluation, e.g., we verified XY rewrite patterns and demonstrated we match 
 \grosser[We aim for this work to serve as a foundation for]{These words carry
 almost zero information, can we get more to the point?} scaling trustworthy, proof-automated formal verification
 using proof assistants into mainstream compiler backends of today and tomorrow.
-\grosser{By automating certified instruction selection to match the development
-speed of mainstream compilers, we take a first step towards bringing dependable software
+\grosser{By automating certified instruction selection we match the development
+speed of mainstream compilers and take a first step towards bringing dependable software
 to the very foundations of our software ecosystem.}
 % (http://www.easterbrook.ca/steve/2010/01/how-to-write-a-scientific-abstract-in-six-easy-steps/)
 \end{abstract}
