Suggest some research questions for the evaluation

--- a/paper.tex
+++ b/paper.tex
@@ -605,6 +605,25 @@ the process of defining a small peephole rewriter is. Give a couple of concrete 
 \section{Evaluation}
 \label{sec:evaluation}
 
+We investigate the effective, trustworthiness, and scalability of our approach
+by evaluating the following research questions:
+
+\begin{description}
+  \item[RQ1] Which parts of the RISC-V SPEC does our SSA-based IR cover, how much
+  of it is validated with respect to the authoritative RISC-V semantics, and how
+  complex where the proofs to perform this validation?
+  \item[RQ2] Can we represent and verify LLVM's instruction selection patterns
+  effectively and with high-degree of automation?
+  \item[RQ3] Which performance in code size and runtime does our backend attain
+  in comparison to LLVM's RISC-V backend?
+\end{description}
+
+\subsection{RQ1: RISC-V SSA IR Coverage and Validation}
+
+\subsection{RQ2: Automatic Verification of Instruction Selection Patterns}
+
+\subsection{RQ3: Code Size and Runtime Performance Certified RISC-V vs LLVM}
+
 \section{Related Work}
 
 \section{Conclusion}
